--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
       <div id="hw">
-          <img class="middle_div" id="photo" src="popcat_1.jpeg" onclick="changePic()" width="500" height="500">
+          <img class="middle_div" id="photo" src="./popcat_1.jpeg" onclick="changePic()" width="500" height="500">
       </div>
     </body>
 </html>
