--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="Eng">
     <head>
         <meta charset="utf-8">
-        <title>뇸뇸뇸</title>
+        <title>Pop Cat</title>
         <link rel="shortcut icon" href="" type="image/x-icon">
         <link rel="stylesheet" href="./style.css">
         <script src="./js.js"></script>
