--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <title>Pop Cat</title>
         <link rel="shortcut icon" href="" type="image/x-icon">
         <link rel="stylesheet" href="./style.css">
-        <script src="./js.js"></script>
     </head>
     <body>
       <div id="hw">
-          <img class="middle_div" id="photo" src="./popcat_1.jpeg" onclick="changePic()" width="500" height="500">
+          <img class="middle_div" id="photo" src="./popcat_1.jpeg" width="500" height="500">
       </div>
+      <script src="./js.js"></script>
     </body>
 </html>
